# ravenoc

./: .ecrc  .editorconfig  .gitignore  .gitmodules  :  Dockerfile.ravenoc  LICENSE  Makefile  README.md  TODO  bkp.makefile.old  log.txt  log2.txt  ravenoc.core  test  test_ravenoc.py  tox.ini
.github/workflows/: lint_editor.yaml  lint_sv.yaml  regression.yaml
model/: CMakeLists.txt  alias_shortcut  run.sh  template.gtkw
model/inc/: DataStructs.h  Dbg.h  NoC.h  PktGen.h  RavenNoCConfig.h.in  Router.h  Tile.h  noc.h  ravenNoCConfig.h.in  router.h  testbench.h
model/src/: Dbg.cpp  Main.cpp  NoC.cpp  PktGen.cpp  Router.cpp  hello.cpp  main.cpp  noc.cpp  router.cpp  testbench.cpp
src/: .ravenoc.sv.swp  fifo.sv  input_ctrl.sv  input_datapah.sv  input_datapath.sv  input_module.sv  input_router.sv  output_module.sv  ravenoc.sv  ravenoc_wrapper.sv  router_ravenoc.sv  rr_arbiter.sv  vc_buffer.sv  vc_ctrl.sv
src/include/: ravenoc_axi.svh  ravenoc_axi_fnc.svh  ravenoc_axi_structs.svh  ravenoc_defines.svh  ravenoc_pkg.sv  ravenoc_structs.svh
src/ni/: async_gp_fifo.sv  axi_csr.sv  axi_slave_if.sv  cdc_pkt.sv  pkt_proc.sv  router_wrapper.sv
src/router/: fifo.sv  high_prior_arbiter.sv  input_datapath.sv  input_module.sv  input_router.sv  output_module.sv  router_if.sv  router_ravenoc.sv  rr_arbiter.sv  vc_buffer.sv
tb/: Makefile  README.md  axi_st.h  axi_tb.h  default_values.py  dut.h  ravenoc_wrapper.sv  simvision5093.diag  test_all_buffers.py  test_all_nodes.py  test_irqs.py  test_max_data.py  test_noc_csr.py  test_ravenoc_basic.py  test_throughput.py  test_virt_chn_qos.py  test_wrong_ops.py  testbench.cpp  testbench.py  testbench.sv
tb/common_noc/: constants.py  noc_pkt.py  ravenoc_pkt.py  testbench.py
tb/old/: Makefile  axi_tb.h  dut.h  testbench.cpp  testbench.sv.bvkp
utils/: dump_all_xcelium.tcl  ravenoc.gtkw  ravenoc_basic_vanilla.gtkw  ravenoc_coffee.gtkw  ravenoc_vanilla.gtkw  restore.tcl  restore.tcl.svcf  run_verible.sh
